# TP2-TD7

./: .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
dags/: fill_data.py  run_dbt.py
dbt_tp/: package-lock.yml
dbt_tp/models/example/: maximos_valores.sql  my_first_dbt_model.sql  my_second_dbt_model.sql  procesamiento_categorico.sql  sources.yml
sql/: create_tables.sql
td7/: config.py  data_generator.py  schema.py
